--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -4,7 +4,7 @@ build:
   version: "2.0"
 
 loans:
-  message: "Welcome to EazyBank loans related production APIs "
+  message: "Welcome to EazyBank loans related productn APIs "
   contactDetails:
     name: "Smitha Ray - prod Lead"
     email: "smitha@eazybank.com"
