--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -4,7 +4,7 @@ build:
   version: "2.0"
 
 cards:
-  message: "Welcome to EazyBank cards related Productionn APIs "
+  message: "Welcome to EazyBank cards related Production test APIs "
   contactDetails:
     name: "Smitha Ray - Prod Lead"
     email: "smitha@eazybank.com"
